GNOME Bugzilla – Bug 788576
Download never starts in ephy. Works fine in Webkit MiniBrowser.
Last modified: 2018-01-07 00:55:19 UTC
Visit the URL. Click the share icon on the left, and then 'Download data' on the right. The Download never starts. Works fine in Webkit MiniBrowser.
Indeed. Interesting!
As of today, it actually crashes Epiphany.
Well I don't know what was wrong back in 3.26 at the time you reported this bug, but the only problem in master is a small oversight in the Safe Browsing implementation. The download works fine with this fixed.
The following fix has been pushed: a505a6e gsb-utils: Don't crash when handling blob URIs
Created attachment 366439 [details] [review] gsb-utils: Don't crash when handling blob URIs
(In reply to Michael Catanzaro from comment #3) > Well I don't know what was wrong back in 3.26 at the time you reported this > bug, but the only problem in master is a small oversight in the Safe > Browsing implementation. The download works fine with this fixed. Note: it can't be the bug you originally reported, because that code does not exist at all in 3.26.
(In reply to Michael Catanzaro from comment #3) > Well I don't know what was wrong back in 3.26 at the time you reported this > bug, but the only problem in master is a small oversight in the Safe > Browsing implementation. The download works fine with this fixed. Hm, that's wrong! I had another change locally that accidentally broke something else, which inadvertently fixed this. Hang on....
The following fix has been pushed: 1490f21 Fix download of blob URIs
Created attachment 366441 [details] [review] Fix download of blob URIs Epiphany doesn't recognize blob as a web scheme, causing it to try opening it in an external URI handler in its policy decision callback... doesn't work.