gsb-utils: Don't crash when handling blob URIs

https://bugzilla.gnome.org/show_bug.cgi?id=788576